--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@ body, html {
 
 header, div, h1 {
   
-  background-image: url(Joias Villa.jpg);
-  padding:50px,
-  text-aling: center,
-  font-size: 30px
-  
-}
+  background-image: url("Joias Villa.jpg"), no-repit;
+  text-align: center,
+  font-family:
+  font-size: 60px
+  }
 
 nav ul{
   padding: 10px;
